--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <!-- Favicons -->
-    <link
+    <!-- <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/favicon_io/apple-touch-icon.png"
@@ -38,8 +38,8 @@
       type="image/png"
       sizes="16x16"
       href="/favicon_io/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/favicon_io/site.webmanifest" />
+    /> -->
+    <!-- <link rel="manifest" href="/favicon_io/site.webmanifest" /> -->
     <!-- Bundle -->
     <script defer src="/bundle.js"></script>
   </head>
